# GenderClassification

./: CMakeLists.txt  FaceProcessing.cpp  FlyCaptureWrapper.h  README.md  classification.cpp  classification.h  face_detection_and_crop.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.pro
model/: README.md
xml/: README.md
